修改博文格式

--- a/_posts/2017-09-25-【LeetCode】167.Two Sum II - Input array is sorted.md
+++ b/_posts/2017-09-25-【LeetCode】167.Two Sum II - Input array is sorted.md
@@ -7,7 +7,8 @@ author:     ChangShihyoung
 header-img: img/post-header-AlgorithmReview-background.png
 catalog: true
 tags:
-    - LeetCode - AlgorithmReview
+    - LeetCode
+	- AlgorithmReview
 ---
 
 ## Two Sum II - Input array is sorted 
@@ -47,7 +48,7 @@ public:
 > - **返回值：**找不到时返回`low`  
 找到时：返回`mid`即可。  
 找不到时：`high`的范围是[-1, size()-1]，-1会出错；`low`的范围是[0, size()]，可以返回。  
->> 更加详细可参考：[博客-【AlgorithmReview】二分查找及其变形](https://***.html)  
+>> 更加详细可参考：[博客-【AlgorithmReview】二分查找及其变形](https://changshihyoung.github.io/2017/09/27/AlgorithmReview-%E4%BA%8C%E5%88%86%E6%9F%A5%E6%89%BE%E5%8F%8A%E5%85%B6%E5%8F%98%E5%BD%A2/)  
 
 ```C++
 class Solution {
