--- a/_posts/2017-09-15-【LeetCode】1.Two Sum.md
+++ b/_posts/2017-09-15-【LeetCode】1.Two Sum.md
@@ -1,3 +1,16 @@
+---
+layout:     post
+title:      【LeetCode】1.Two Sum
+subtitle:   
+date:       2017-09-15
+author:     ChangShihyoung
+header-img: img/post-header-AlgorithmReview-background.png
+catalog: true
+tags:
+    - LeetCode
+    - AlgorithmReview
+---
+
 ## Two Sum 
 已给数组，其中找两个数，加起来等于target。  
 注意：假设对每种输入只有**一种**输出 
