--- a/_posts/2017-09-26-【LeetCode】170.Two Sum III - Data structure design.md
+++ b/_posts/2017-09-26-【LeetCode】170.Two Sum III - Data structure design.md
@@ -1,3 +1,16 @@
+---
+layout:     post
+title:      【LeetCode】170.Two Sum III - Data structure design
+subtitle:   
+date:       2017-09-26
+author:     ChangShihyoung
+header-img: img/post-header-AlgorithmReview-background.png
+catalog: true
+tags:
+    - LeetCode
+    - AlgorithmReview
+---
+
 ## Two Sum III - Data structure design 
 根据Two Sum的描述设计一个类，包括下面两种功能：  
 1.`add(num)`向数据结构内添加`num`  
